// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CloseButton /> CustomAriaLabel story renders snapshot 1`] = `
<button
  class="button colorBrand button variantLink colorBrand"
  type="button"
>
  <svg
    class="svgIcon"
    fill="currentColor"
    height="2rem"
    role="img"
    style="--svg-icon-size: 2rem;"
    viewBox="0 0 24 24"
    width="2rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      close modal
    </title>
    <path
      d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> Default story renders snapshot 1`] = `
<button
  class="button colorBrand button variantLink colorBrand"
  type="button"
>
  <svg
    class="svgIcon"
    fill="currentColor"
    height="2rem"
    role="img"
    style="--svg-icon-size: 2rem;"
    viewBox="0 0 24 24"
    width="2rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      close
    </title>
    <path
      d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> DifferentColor story renders snapshot 1`] = `
<button
  class="button colorAlert button variantLink colorAlert"
  type="button"
>
  <svg
    class="svgIcon"
    fill="currentColor"
    height="2rem"
    role="img"
    style="--svg-icon-size: 2rem;"
    viewBox="0 0 24 24"
    width="2rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      close
    </title>
    <path
      d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
    />
  </svg>
</button>
`;

exports[`<CloseButton /> SmallerSize story renders snapshot 1`] = `
<button
  class="button colorBrand button variantLink colorBrand"
  type="button"
>
  <svg
    class="svgIcon"
    fill="currentColor"
    height="1rem"
    role="img"
    style="--svg-icon-size: 1rem;"
    viewBox="0 0 24 24"
    width="1rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      close
    </title>
    <path
      d="M18.3 5.71a.9959.9959 0 00-1.41 0L12 10.59 7.11 5.7a.9959.9959 0 00-1.41 0c-.39.39-.39 1.02 0 1.41L10.59 12 5.7 16.89c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 13.41l4.89 4.89c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L13.41 12l4.89-4.89c.38-.38.38-1.02 0-1.4z"
    />
  </svg>
</button>
`;
